--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,8 +38,13 @@ message(STATUS "Compile for Machine: " ${ARCHITECTURE})
 # add include directories here
 include_directories(
 	include
+	include/mvs
 	${CMAKE_BINARY_DIR}
 )
+
+set(DIR_LIBS_MVS "/opt/MVS/lib/aarch64/")
+
+link_directories(${DIR_LIBS_MVS})
 
 add_subdirectory(src)
 
