--- a/cmake/project_version.h.in
+++ b/cmake/project_version.h.in
@@ -1,17 +1,19 @@
 #ifndef _@PROJECT_NAME_UPPER@_VERSION_H_
 #define _@PROJECT_NAME_UPPER@_VERSION_H_
 
-#define @PROJECT_NAME_UPPER@_NAME "@PROJECT_NAME_UPPER@"
+#define PROJECT_UPPER_NAME	"@PROJECT_NAME_UPPER@"
 
-/// project version as major.minor.patch string
-#define @PROJECT_NAME_UPPER@_VERSION "@D3CAM_PROJECT_VERSION@"
-/// project version as integer: major * 10000 + minor * 100 + patch
-#define @PROJECT_NAME_UPPER@_VERSION_INT @D3CAM_PROJECT_VERSION_INT@
-#define @PROJECT_NAME_UPPER@_VERSION_MAJOR @PACKAGE_VERSION_MAJOR@
-#define @PROJECT_NAME_UPPER@_VERSION_MINOR @PACKAGE_VERSION_MINOR@
-#define @PROJECT_NAME_UPPER@_VERSION_PATCH @PACKAGE_VERSION_PATCH@
+/* project version as major.minor.patch string */
+#define PROJECT_VERSION		"@D3CAM_PROJECT_VERSION@"
+
+/* project version as integer: major * 10000 + minor * 100 + patch */
+#define PROJECT_VERSION_INT	@D3CAM_PROJECT_VERSION_INT@
+#define PROJECT_VERSION_MAJOR	@PACKAGE_VERSION_MAJOR@
+#define PROJECT_VERSION_MINOR	@PACKAGE_VERSION_MINOR@
+#define PROJECT_VERSION_PATCH	@PACKAGE_VERSION_PATCH@
+
 /// package version as string, possibly with git commit: v1.2.3+4+g56789abc
-#define @PROJECT_NAME_UPPER@_PACKAGE_VERSION "@D3CAM_PACKAGE_VERSION@"
+#define PROJECT_PACKAGE_VERSION	"@D3CAM_PACKAGE_VERSION@"
 
 
 #endif /* _@PROJECT_NAME_UPPER@_VERSION_H_ */
