fix select file desc, ISSET must bg 0
Signed-off-by: htrfid <htrfid@htrfid.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,9 @@ message(STATUS "PROJECT_VERSION: " ${PROJECT_VERSION})
 include(cmake/project_version.cmake)
 include(GNUInstallDirs)
 
-if (NOT CMAKE_BUILD_TYPE)
-	set(CMAKE_BUILD_TYPE DEBUG CACHE STRING "Build type: DEBUG or RELEASE" FORCE)
-endif ()
+#if (NOT CMAKE_BUILD_TYPE)
+#	set(CMAKE_BUILD_TYPE DEBUG CACHE STRING "Build type: DEBUG or RELEASE" FORCE)
+#endif ()
 
 message(STATUS "CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE}")
 
