--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ include_directories(
 	"include/so"
 	${INC_WEB_SERVER}
 	${CMAKE_BINARY_DIR}
+	"/usr/local/include/opencv4/"
 )
 
 add_subdirectory(src)
