--- a/src/libpointcloud3d/CMakeLists.txt
+++ b/src/libpointcloud3d/CMakeLists.txt
@@ -2,13 +2,8 @@ set(LIB_POINTCLOUD3D pointcloud3d)
 
 add_library(${LIB_POINTCLOUD3D} SHARED
 	csvCreatePoint3D.cpp
-	csvCreatePoint3D.hpp
-	csvPoint3DCloud.hpp
+	CsvMeasure3D.cpp
 )
-
-target_compile_features(${LIB_POINTCLOUD3D} PUBLIC cxx_std_11)
-
-#arget_link_libraries(${LIB_POINTCLOUD3D} pthread )
 
 install(TARGETS ${LIB_POINTCLOUD3D}
         EXPORT PROJECTTargets
