--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,13 +9,6 @@ if (USING_WEB_SERVER)
 	set(LIB_WEB_SERVER "web")
 endif ()
 
-if (USING_POINTCLOUD)
-	add_definitions(-DUSING_POINTCLOUD3D=1)
-	add_subdirectory(libpointcloud3d)
-
-	set(LIB_POINTCLOUD "pointcloud3d")
-endif ()
-
 if (USING_SPNG)
 	add_subdirectory(libspng)
 
@@ -54,7 +47,7 @@ target_link_libraries(${EXE_TARGET}
 	opencv_world
 #	${OpenCV_LIBS}
 	${LIB_WEB_SERVER}
-	${LIB_POINTCLOUD}
+	pointcloud3d
 	${LIB_SPNG}
 )
 
