--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ endif()
 
 cmake_minimum_required(VERSION 3.5.0 FATAL_ERROR)
 
-project(D3WEB VERSION 1.0.0 LANGUAGES CXX C CUDA)
+#project(D3WEB VERSION 1.0.0 LANGUAGES CXX C CUDA)
+project(D3WEB VERSION 1.0.0 LANGUAGES CXX C)
 
 message(STATUS "PROJECT_NAME: " ${PROJECT_NAME})
 message(STATUS "PROJECT_VERSION: " ${PROJECT_VERSION})
@@ -88,6 +89,13 @@ if (USING_SPNG)
 	)
 endif ()
 
+option(USING_ZIP "Add lib zip" ON)
+if (USING_ZIP)
+	set(INC_ZIP
+		"src/libzip"
+	)
+endif ()
+
 # add include directories here
 include_directories(
 	"include"
@@ -100,6 +108,7 @@ include_directories(
 	${libXML_INCLUDE_DIRS}
 	${OpenCV_INCLUDE_DIRS}
 	${INC_SPNG}
+	${INC_ZIP}
 )
 
 add_subdirectory(src)
