--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ endif()
 
 cmake_minimum_required(VERSION 3.5.0 FATAL_ERROR)
 
-#project(D3WEB VERSION 1.0.0 LANGUAGES CXX C CUDA)
-project(D3WEB VERSION 1.0.0 LANGUAGES CXX C)
+project(D3WEB VERSION 1.0.0 LANGUAGES CXX C CUDA)
+#project(D3WEB VERSION 1.0.0 LANGUAGES CXX C)
 
 message(STATUS "PROJECT_NAME: " ${PROJECT_NAME})
 message(STATUS "PROJECT_VERSION: " ${PROJECT_VERSION})
