fix cmake config
Signed-off-by: htrfid <htrfid@htrfid.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,9 +76,14 @@ option(USING_GX_CAMS "using Daheng galaxy cams" ON)
 option(USING_HK_CAMS "using Hikang cams" OFF)
 if (USING_GX_CAMS)
 	add_definitions(-DUSE_GX_CAMS)
+	set(USING_HK_CAMS OFF CACHE BOOL "No hk cams" FORCE)
 else ()
 	if (USING_HK_CAMS)
 		add_definitions(-DUSE_HK_CAMS)
+		set(USING_GX_CAMS OFF CACHE BOOL "No gx cams" FORCE)
+	else ()
+		add_definitions(-DUSE_GX_CAMS)
+		set(USING_GX_CAMS ON CACHE BOOL "Use gx cams" FORCE)
 	endif ()
 endif ()
 
