--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,14 +9,6 @@ if (USING_WEB_SERVER)
 	set(LIB_WEB_SERVER "web")
 endif ()
 
-if (USING_HK_CAMS)
-	set(LIB_HK_CAMS "MvCameraControl")
-endif ()
-
-if (USING_GX_CAMS)
-	set(LIB_GX_CAMS "gxiapi")
-endif ()
-
 # add some include directories
 #include_directories()
 
@@ -48,7 +40,7 @@ target_link_libraries(${EXE_TARGET}
 	z
 	${LIB_HK_CAMS}
 	${LIB_GX_CAMS}
-	${libXML_LIBS}
+	${LIB_XML2}
 #	opencv_world
 	${OpenCV_LIBS}
 	${LIB_WEB_SERVER}
