--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,7 +54,7 @@ install(TARGETS ${EXE_TARGET}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 #        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-		RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/target
+		RUNTIME DESTINATION /opt/d3cam/
 )
 
 
